--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -203,20 +203,7 @@ jobs:
             Remove-Item -Recurse -Force $tempRepo -ErrorAction SilentlyContinue
         }
 
-    - name: Start OpenClaw Gateway
-      run: |
-        $configPath = "$env:USERPROFILE\.openclaw\openclaw.json"
-        if (Test-Path $configPath) {
-            Write-Host "Config found, starting OpenClaw Gateway..."
-            Start-Process -FilePath "openclaw" -ArgumentList "gateway" -WindowStyle Hidden
-            Start-Sleep -Seconds 5
-            Write-Host "OpenClaw Gateway started in background"
-        } else {
-            Write-Host "No config found, skipping Gateway auto-start"
-            Write-Host "Complete onboard via RDP first, then run: openclaw gateway"
-        }
-
-    # ========== 带定时备份的监控循环 ==========
+    # ========== 启动 Gateway + 带定时备份的监控循环 ==========
 
     - name: Monitor and Periodic Backup
       env:
@@ -228,13 +215,43 @@ jobs:
         $elapsed = 0
         $lastBackup = 0
         $scriptPath = "$env:GITHUB_WORKSPACE\backup-openclaw-state.ps1"
+        $configPath = "$env:USERPROFILE\.openclaw\openclaw.json"
+        $gatewayProcess = $null
 
         Write-Host "Building..."
-        Write-Host "Monitor started | Max runtime: $([math]::Round($maxRuntime/3600, 1))h | Backup interval: $($backupInterval/60)min"
+
+        # 启动 OpenClaw Gateway（如果配置存在）
+        if (Test-Path $configPath) {
+            Write-Host "Config found, starting OpenClaw Gateway..."
+            $gatewayProcess = Start-Process -FilePath "openclaw" -ArgumentList "gateway" -WindowStyle Hidden -PassThru
+            Start-Sleep -Seconds 5
+            if (-not $gatewayProcess.HasExited) {
+                Write-Host "OpenClaw Gateway running (PID: $($gatewayProcess.Id))"
+            } else {
+                Write-Host "Gateway exited immediately, will retry in loop"
+                $gatewayProcess = $null
+            }
+        } else {
+            Write-Host "No config found, skipping Gateway auto-start"
+            Write-Host "Complete onboard via RDP first, then run: openclaw gateway"
+        }
 
         while ($elapsed -lt $maxRuntime) {
             Start-Sleep -Seconds 60
             $elapsed += 60
+
+            # 检测 Gateway 是否存活，挂了就自动重启
+            if ((Test-Path $configPath) -and ($null -eq $gatewayProcess -or $gatewayProcess.HasExited)) {
+                Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Gateway not running, restarting..."
+                $gatewayProcess = Start-Process -FilePath "openclaw" -ArgumentList "gateway" -WindowStyle Hidden -PassThru
+                Start-Sleep -Seconds 3
+                if (-not $gatewayProcess.HasExited) {
+                    Write-Host "Gateway restarted (PID: $($gatewayProcess.Id))"
+                } else {
+                    Write-Host "Gateway failed to start"
+                    $gatewayProcess = $null
+                }
+            }
 
             # 每30分钟执行一次备份
             if (($elapsed - $lastBackup) -ge $backupInterval) {
