--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -216,24 +216,38 @@ jobs:
         $lastBackup = 0
         $scriptPath = "$env:GITHUB_WORKSPACE\backup-openclaw-state.ps1"
         $configPath = "$env:USERPROFILE\.openclaw\openclaw.json"
+        $gwLogFile = "$env:TEMP\openclaw-gw.log"
+        $gwErrFile = "$env:TEMP\openclaw-gw-err.log"
         $gatewayProcess = $null
+
+        # 启动 Gateway 的函数
+        function Start-Gateway {
+            $args_list = @("gateway", "--port", "18789", "--force")
+            $proc = Start-Process -FilePath "openclaw" -ArgumentList $args_list -NoNewWindow -PassThru -RedirectStandardOutput $gwLogFile -RedirectStandardError $gwErrFile
+            Start-Sleep -Seconds 5
+            if (-not $proc.HasExited) {
+                Write-Host "OpenClaw Gateway running (PID: $($proc.Id))"
+                return $proc
+            } else {
+                $exitCode = $proc.ExitCode
+                Write-Host "Gateway exited with code: $exitCode"
+                if (Test-Path $gwErrFile) {
+                    $errContent = Get-Content $gwErrFile -Tail 10 -ErrorAction SilentlyContinue
+                    if ($errContent) { Write-Host "Gateway error: $errContent" }
+                }
+                return $null
+            }
+        }
 
         Write-Host "Building..."
 
         # 启动 OpenClaw Gateway（如果配置存在）
         if (Test-Path $configPath) {
-            Write-Host "Config found, starting OpenClaw Gateway..."
-            $gatewayProcess = Start-Process -FilePath "openclaw" -ArgumentList "gateway" -WindowStyle Hidden -PassThru
-            Start-Sleep -Seconds 5
-            if (-not $gatewayProcess.HasExited) {
-                Write-Host "OpenClaw Gateway running (PID: $($gatewayProcess.Id))"
-            } else {
-                Write-Host "Gateway exited immediately, will retry in loop"
-                $gatewayProcess = $null
-            }
+            Write-Host "Config found, starting OpenClaw Gateway on port 18789..."
+            $gatewayProcess = Start-Gateway
         } else {
             Write-Host "No config found, skipping Gateway auto-start"
-            Write-Host "Complete onboard via RDP first, then run: openclaw gateway"
+            Write-Host "Complete onboard via RDP first, then run: openclaw gateway --port 18789"
         }
 
         while ($elapsed -lt $maxRuntime) {
@@ -243,14 +257,7 @@ jobs:
             # 检测 Gateway 是否存活，挂了就自动重启
             if ((Test-Path $configPath) -and ($null -eq $gatewayProcess -or $gatewayProcess.HasExited)) {
                 Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Gateway not running, restarting..."
-                $gatewayProcess = Start-Process -FilePath "openclaw" -ArgumentList "gateway" -WindowStyle Hidden -PassThru
-                Start-Sleep -Seconds 3
-                if (-not $gatewayProcess.HasExited) {
-                    Write-Host "Gateway restarted (PID: $($gatewayProcess.Id))"
-                } else {
-                    Write-Host "Gateway failed to start"
-                    $gatewayProcess = $null
-                }
+                $gatewayProcess = Start-Gateway
             }
 
             # 每30分钟执行一次备份
