--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -217,52 +217,123 @@ jobs:
         $scriptPath = "$env:GITHUB_WORKSPACE\backup-openclaw-state.ps1"
         $configPath = "$env:USERPROFILE\.openclaw\openclaw.json"
         $gwLogFile = "$env:TEMP\openclaw-gw.log"
-        $gatewayJob = $null
+        $gwFailCount = 0
+        $gwMaxFails = 5           # 连续失败 5 次后停止自动重启
 
-        # 用 Start-Job 启动 Gateway（避免 .cmd 不是有效 Win32 程序的问题）
+        # ---- 检测端口是否有进程在监听 ----
+        function Test-GatewayListening {
+            $conn = Get-NetTCPConnection -LocalPort 18789 -State Listen -ErrorAction SilentlyContinue
+            return ($null -ne $conn)
+        }
+
+        # ---- 杀掉占用 18789 端口的旧进程 ----
+        function Stop-GatewayProcess {
+            $conns = Get-NetTCPConnection -LocalPort 18789 -ErrorAction SilentlyContinue
+            foreach ($c in $conns) {
+                try { Stop-Process -Id $c.OwningProcess -Force -ErrorAction SilentlyContinue } catch {}
+            }
+        }
+
+        # ---- 用 cmd.exe 启动 Gateway（避免 .cmd 不是有效 Win32 程序的问题） ----
         function Start-Gateway {
+            # 杀旧进程
+            Stop-GatewayProcess
+            Start-Sleep -Seconds 2
+
             # 清理旧日志
             if (Test-Path $gwLogFile) { Remove-Item $gwLogFile -Force -ErrorAction SilentlyContinue }
-            $job = Start-Job -ScriptBlock {
-                param($log)
-                openclaw gateway --port 18789 --force 2>&1 | Out-File $log -Append
-            } -ArgumentList $gwLogFile
-            Start-Sleep -Seconds 5
-            if ($job.State -eq 'Running') {
-                Write-Host "OpenClaw Gateway running (Job ID: $($job.Id), State: $($job.State))"
-                return $job
-            } else {
-                Write-Host "Gateway failed to start (State: $($job.State))"
-                $output = Receive-Job $job -ErrorAction SilentlyContinue
-                if ($output) { Write-Host "Gateway output: $output" }
-                Remove-Job $job -Force -ErrorAction SilentlyContinue
-                return $null
+
+            # 用 cmd.exe 启动（cmd.exe 是真正的 Win32 可执行文件，可以处理 .cmd 包装器）
+            # 输出重定向写在 cmd 命令行里，不经过 PowerShell 管道
+            Start-Process -FilePath "cmd.exe" `
+                -ArgumentList "/c", "openclaw gateway --port 18789 --force > `"$gwLogFile`" 2>&1" `
+                -WindowStyle Hidden
+
+            # 等待最多 30 秒检测端口是否开始监听
+            for ($wait = 1; $wait -le 10; $wait++) {
+                Start-Sleep -Seconds 3
+                if (Test-GatewayListening) {
+                    Write-Host "Gateway listening on port 18789 (started in $($wait*3)s)"
+                    return $true
+                }
             }
+
+            # 启动失败，输出日志帮助诊断
+            Write-Host "Gateway failed to start listening within 30 seconds"
+            if (Test-Path $gwLogFile) {
+                $logLines = Get-Content $gwLogFile -Tail 20 -ErrorAction SilentlyContinue
+                if ($logLines) {
+                    Write-Host "--- Gateway log (last 20 lines) ---"
+                    $logLines | ForEach-Object { Write-Host "  $_" }
+                    Write-Host "--- end log ---"
+                }
+            }
+            return $false
         }
 
         Write-Host "Building..."
 
-        # 启动 OpenClaw Gateway（如果配置存在）
+        # ---- 导出环境变量到 .env（解决非交互会话缺少环境变量的问题） ----
+        $envFile = "$env:USERPROFILE\.openclaw\.env"
+        if (Test-Path "$env:USERPROFILE\.openclaw") {
+            # 如果 .env 不存在就创建一个空的，确保 gateway 能加载
+            if (-not (Test-Path $envFile)) {
+                New-Item -ItemType File -Path $envFile -Force | Out-Null
+                Write-Host "Created empty .env file for OpenClaw"
+            }
+        }
+
+        # ---- 启动 OpenClaw Gateway（如果配置存在） ----
         if (Test-Path $configPath) {
             Write-Host "Config found, starting OpenClaw Gateway on port 18789..."
-            $gatewayJob = Start-Gateway
+            $gwStarted = Start-Gateway
+            if (-not $gwStarted) {
+                $gwFailCount++
+                Write-Host "Initial gateway start failed ($gwFailCount/$gwMaxFails)"
+            }
         } else {
             Write-Host "No config found, skipping Gateway auto-start"
-            Write-Host "Complete onboard via RDP first, then run: openclaw gateway --port 18789"
+            Write-Host "========================================="
+            Write-Host "  Please connect via RDP and run:"
+            Write-Host "    openclaw onboard"
+            Write-Host "  Then start the gateway:"
+            Write-Host "    openclaw gateway --port 18789"
+            Write-Host "========================================="
         }
 
         while ($elapsed -lt $maxRuntime) {
             Start-Sleep -Seconds 60
             $elapsed += 60
 
-            # 检测 Gateway 是否存活，挂了就自动重启
-            if ((Test-Path $configPath) -and ($null -eq $gatewayJob -or $gatewayJob.State -ne 'Running')) {
-                Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Gateway not running, restarting..."
-                if ($null -ne $gatewayJob) { Remove-Job $gatewayJob -Force -ErrorAction SilentlyContinue }
-                $gatewayJob = Start-Gateway
+            # ---- 检测 Gateway 是否存活（用端口监听判断，比进程状态更可靠） ----
+            if ((Test-Path $configPath) -and -not (Test-GatewayListening)) {
+                if ($gwFailCount -lt $gwMaxFails) {
+                    Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Gateway not listening on port 18789, restarting... (attempt $($gwFailCount+1)/$gwMaxFails)"
+                    $gwStarted = Start-Gateway
+                    if ($gwStarted) {
+                        $gwFailCount = 0   # 成功启动则重置计数器
+                    } else {
+                        $gwFailCount++
+                        if ($gwFailCount -ge $gwMaxFails) {
+                            Write-Host "========================================="
+                            Write-Host "  Gateway failed $gwMaxFails times, stopping auto-restart"
+                            Write-Host "  Please connect via RDP and start manually:"
+                            Write-Host "    openclaw gateway --port 18789"
+                            Write-Host "  Or check the log: $gwLogFile"
+                            Write-Host "========================================="
+                        }
+                    }
+                }
+                # 超过重试上限后不再尝试，避免日志刷屏
+            } elseif (Test-GatewayListening) {
+                # Gateway 正在运行，如果之前有失败计数，重置它
+                if ($gwFailCount -gt 0) {
+                    Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Gateway is back online, resetting fail counter"
+                    $gwFailCount = 0
+                }
             }
 
-            # 每30分钟执行一次备份
+            # ---- 每30分钟执行一次备份 ----
             if (($elapsed - $lastBackup) -ge $backupInterval) {
                 $runMin = [math]::Round($elapsed / 60)
                 Write-Host "[$(Get-Date -Format 'HH:mm:ss')] Periodic backup (running ${runMin}min)..."
